force-app/main/default/objects/Workshop_Event__c/Workshop_Event__c.object-meta.xml
<CustomObject>
    <label>Workshop Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshop Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>