force-app/main/default/objects/Workshop_Event__c/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <label>Event Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>