force-app/main/default/objects/Workshop_Event__c/fields/Event_grade__c.field-meta.xml
<CustomField>
    <fullName>Event_grade__c</fullName>
    <label>Event grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>