force-app/main/default/objects/Workshop_Event__c/fields/Event_link__c.field-meta.xml
<CustomField>
    <fullName>Event_link__c</fullName>
    <label>Event link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>