force-app/main/default/objects/Workshop_Event__c/fields/Event_Password__c.field-meta.xml
<CustomField>
    <fullName>Event_Password__c</fullName>
    <label>Event Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>