force-app/main/default/objects/Workshop_Event__c/fields/Event_type__c.field-meta.xml
<CustomField>
    <fullName>Event_type__c</fullName>
    <label>Event type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>to be defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>