force-app/main/default/objects/Workshop_Event__c/fields/Guests__c.field-meta.xml
<CustomField>
    <fullName>Guests__c</fullName>
    <label>Guests</label>
    <length>100</length>
    <type>Text</type>
</CustomField>