force-app/main/default/objects/Workshop_Event__c/fields/Marketing_Material__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Material__c</fullName>
    <label>Marketing Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF invitation to email (with link)</fullName>
            </value>
            <value>
                <fullName>invitation to whatsapp</fullName>
            </value>
            <value>
                <fullName>Artwork for feed publishing</fullName>
            </value>
            <value>
                <fullName>Artwork for story publishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>