force-app/main/default/objects/Workshop_Event__c/fields/Payment_process__c.field-meta.xml
<CustomField>
    <fullName>Payment_process__c</fullName>
    <label>Payment process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Paid out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>