force-app/main/default/objects/Workshop_Event__c/fields/Speak_subject__c.field-meta.xml
<CustomField>
    <fullName>Speak_subject__c</fullName>
    <label>Speak subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Why visit the gynecologist frequently??</fullName>
            </value>
            <value>
                <fullName>Myths and truths about contraception</fullName>
            </value>
            <value>
                <fullName>women&apos;s mental health</fullName>
            </value>
            <value>
                <fullName>Breast cancer: prevention and diagnosis</fullName>
            </value>
            <value>
                <fullName>Sexually Transmitted Infections (STIs)?</fullName>
            </value>
            <value>
                <fullName>Understanding your menstruation: Abnormal Uterine Bleeding (AUB) awareness</fullName>
            </value>
            <value>
                <fullName>The challenges of perimenopause</fullName>
            </value>
            <value>
                <fullName>Pregnancy, postpartum and baby care</fullName>
            </value>
            <value>
                <fullName>Egg freezing</fullName>
            </value>
            <value>
                <fullName>LGBTQIA+ and Contraception</fullName>
            </value>
            <value>
                <fullName>Sex - Let&apos;s break that taboo</fullName>
            </value>
            <value>
                <fullName>Endometriosis</fullName>
            </value>
            <value>
                <fullName>STIs</fullName>
            </value>
            <value>
                <fullName>IUD for my teenage daughter</fullName>
            </value>
            <value>
                <fullName>Sports performance and IUD use</fullName>
            </value>
            <value>
                <fullName>Perimenopause</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>