force-app/main/default/objects/Workshop_Event__c/fields/Women_impacted__c.field-meta.xml
<CustomField>
    <fullName>Women_impacted__c</fullName>
    <label>Women impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>