force-app/main/default/objects/Workshop_Event__c/fields/Women_Impacted_After_Event__c.field-meta.xml
<CustomField>
    <fullName>Women_Impacted_After_Event__c</fullName>
    <label>Women Impacted After Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>